@@ -22,16 +22,12 @@ package com.guardtime.ksi.unisignature.verifier.rules;
 
 import com.guardtime.ksi.exceptions.KSIException;
 import com.guardtime.ksi.unisignature.CalendarHashChain;
-import com.guardtime.ksi.unisignature.CalendarHashChainLink;
 import com.guardtime.ksi.unisignature.KSISignature;
 import com.guardtime.ksi.unisignature.verifier.VerificationContext;
 import com.guardtime.ksi.unisignature.verifier.VerificationErrorCode;
 import com.guardtime.ksi.unisignature.verifier.VerificationResultCode;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-import java.util.LinkedList;
-import java.util.List;
+import static com.guardtime.ksi.unisignature.CalendarHashChainUtil.areCalendarHashChainRightLinksConsistent;
 
 /**
  * Checks that: <ul> <li>the extended calendar hash chain contains the same count of right
@@ -40,45 +36,19 @@ import java.util.List;
  */
 public class ExtendedSignatureCalendarHashChainRightLinksMatchesRule extends BaseRule {
 
-
-    private static final Logger LOGGER = LoggerFactory.getLogger(ExtendedSignatureCalendarHashChainRightLinksMatchesRule.class);
-
     public VerificationResultCode verifySignature(VerificationContext context) throws KSIException {
         KSISignature signature = context.getSignature();
         CalendarHashChain extendedCalendarHashChain = context.getExtendedCalendarHashChain(signature.getCalendarHashChain().getPublicationTime());
 
-        List<CalendarHashChainLink> signatureRightLinks = getRightLinks(signature.getCalendarHashChain());
-        List<CalendarHashChainLink> extendedSignatureRightLinks = getRightLinks(extendedCalendarHashChain);
-
-        if (signatureRightLinks.size() != extendedSignatureRightLinks.size()) {
-            LOGGER.info("Extended signature calendar hash chain right links count does not match with initial signature calendar hash chain right links count. Expected {}, found {}.", signatureRightLinks.size(), extendedSignatureRightLinks.size());
+        if (areCalendarHashChainRightLinksConsistent(signature.getCalendarHashChain(), extendedCalendarHashChain)) {
+            return VerificationResultCode.OK;
+        } else {
             return VerificationResultCode.FAIL;
         }
 
-        for (int i = 0; i < extendedSignatureRightLinks.size(); i++) {
-            CalendarHashChainLink link = extendedSignatureRightLinks.get(i);
-            CalendarHashChainLink initialLink = signatureRightLinks.get(i);
-            if (!link.getDataHash().equals(initialLink.getDataHash())) {
-                LOGGER.info("Extended signature contains different calendar hash chain right link");
-                return VerificationResultCode.FAIL;
-            }
-        }
-
-        return VerificationResultCode.OK;
     }
 
     public VerificationErrorCode getErrorCode() {
         return VerificationErrorCode.CAL_04;
     }
-
-    private List<CalendarHashChainLink> getRightLinks(CalendarHashChain hashChain) {
-        List<CalendarHashChainLink> returnable = new LinkedList<>();
-        for (CalendarHashChainLink link : hashChain.getChainLinks()) {
-            if (link.isRightLink()) {
-                returnable.add(link);
-            }
-        }
-        return returnable;
-    }
-
 }
