@@ -6,6 +6,7 @@ Version 4.12
 * IMPROVEMENT: Added convenience methods for creating TLVElement and setting its content.
 * IMPROVEMENT: For aggregation and extension requests take HMAC algorithm from credentials.
 * IMPROVEMENT: Add option to set HMAC algorithm that is used in tests via integrationtest.properties.
+* IMPROVEMENT: Verify calendar hash chain consistency when extending a signature
 * BUGFIX: KSI close now closes publications client/service.
 * BUGFIX: Tests are now closing services, clients and KSI.
 * BUGFIX: Hash data imprint when hashing DataHash object.
